2009.11.20

* Added clean.sh admin script.
* Cleaned up TODO file.
* Updated meta file with more data and incremented the version to 0.3.
* Added utils subpackage.
* Updated setup.py to use the new utils subpackage.
* Added docs.
* Updated README.

2008.11.10

* Added a test for None/null.
* Added a serializer for Python datetime -> JSON.
* Updated the version.
* Updated the commitAndPush script to pass the skip_tests parameter (and fixed
its filename extention).
* Added missing sudo to cleanup function.
* Removed unused clean script (and made sure that the other scripts use the
clean function).
* Converted checkBuild to function and removed script.
* Made the error function take a message parameter.
* Updated the bzr push command for svn.
* Fixed failing test for new "none" check.
* Removed sudo calls from admin scripts.
* Updated the ChangeLog with missing notes from earlier today.
* Moved version info into meta package file.

2008.07.18

* Added more admin scripts.

2008.07.16

* Applied a patch from Moshe Zadka: "When getting a long reply, the client
library, using code from xmlrpclib, will attempt to call feed multiple times
with partial messages. The supplied parser assumes feed will only be called
with a complete message."

2008.06.15

* Added Fault class.
* Updated SimpleParser to properly return results when using jsonrpclib
(synchronous, blocking code).
* Added Transport and ServerProxy.
* Added web example (in addition to the already-extant web2 example).
* Removed extraneous print/debug code.
* Incremented version number.
* Added missing NOT_FOUND to web.jsonrpc.
* Updated the version number.

2008.06.14

* Removed extraneous while space.
* Added NoSuchFunction class.

2008.06.11

* Updated the commit script to work with bzr-svn.
* Added a path hack to commit.sh for running trial.
* Renamed adytum to txjsonrpc.
* Moved web and web2 up and renamed twisted to netstring.
* Removed .pyc files.
* Tweaked the commit script.
* Added license.