@@ -1,31 +1,22 @@
-# -*- test-case-name: twisted.web2.test.test_jsonrpc -*-
-#
 # Copyright (c) 2001-2004 Twisted Matrix Laboratories.
 # See LICENSE for details.
-
-
-"""A generic resource for publishing objects via JSON-RPC.
+"""
+A generic resource for publishing objects via JSON-RPC.
 
 API Stability: semi-stable
 
 Maintainer: U{Duncan McGreggor <mailto:oubiwann@adytum.us>}
 """
-
-# System Imports
-import urlparse
-
-# Sibling Imports
-from twisted.web2 import resource, stream
-from twisted.web2 import responsecode, http, http_headers 
-
 from twisted.protocols import basic
 from twisted.internet import defer, protocol, reactor
 from twisted.python import log, reflect
 
 from txjsonrpc import jsonrpclib
 
+
 class JSONRPC(basic.NetstringReceiver):
-    """A protocol that implements JSON-RPC.
+    """
+    A protocol that implements JSON-RPC.
     
     Methods published can return JSON-RPC serializable results, Faults,
     Binary, Boolean, DateTime, Deferreds, or Handler instances.
@@ -36,7 +27,6 @@ class JSONRPC(basic.NetstringReceiver):
     can be added with putSubHandler. By default, prefixes are
     separated with a '.'. Override self.separator to change this.
     """
-
     # Error codes for Twisted, if they conflict with yours then
     # modify them at runtime.
     NOT_FOUND = 8001
@@ -100,7 +90,8 @@ class JSONRPC(basic.NetstringReceiver):
         return jsonrpclib.Fault(self.FAILURE, "error")
 
     def getFunction(self, functionPath):
-        """Given a string, return a function, or raise NoSuchFunction.
+        """
+        Given a string, return a function, or raise NoSuchFunction.
 
         This returned function will be called, and should return the result
         of the call, a Deferred, or a Fault instance.
@@ -130,12 +121,15 @@ class JSONRPC(basic.NetstringReceiver):
             return f
 
     def _listFunctions(self):
-        """Return a list of the names of all jsonrpc methods."""
+        """
+        Return a list of the names of all jsonrpc methods.
+        """
         return reflect.prefixedMethodNames(self.__class__, 'jsonrpc_')
 
 
 class JSONRPCIntrospection(JSONRPC):
-    """Implement the JSON-RPC Introspection API.
+    """
+    Implement the JSON-RPC Introspection API.
 
     By default, the methodHelp method returns the 'help' method attribute,
     if it exists, otherwise the __doc__ method attribute, if it exists,
@@ -147,7 +141,8 @@ class JSONRPCIntrospection(JSONRPC):
     """
 
     def __init__(self, parent):
-        """Implement Introspection support for an JSONRPC server.
+        """
+        Implement Introspection support for an JSONRPC server.
 
         @param parent: the JSONRPC server to add Introspection support to.
         """
@@ -156,7 +151,9 @@ class JSONRPCIntrospection(JSONRPC):
         self._jsonrpc_parent = parent
 
     def jsonrpc_listMethods(self):
-        """Return a list of the method names implemented by this server."""
+        """
+        Return a list of the method names implemented by this server.
+        """
         functions = []
         todo = [(self._jsonrpc_parent, '')]
         while todo:
@@ -171,16 +168,18 @@ class JSONRPCIntrospection(JSONRPC):
     jsonrpc_listMethods.signature = [['array']]
 
     def jsonrpc_methodHelp(self, method):
-        """Return a documentation string describing the use of the given method.
+        """
+        Return a documentation string describing the use of the given method.
         """
         method = self._jsonrpc_parent.getFunction(method)
         return (getattr(method, 'help', None)
-                or getattr(method, '__doc__', None) or '')
+                or getattr(method, '__doc__', None) or '').strip()
 
     jsonrpc_methodHelp.signature = [['string', 'string']]
 
     def jsonrpc_methodSignature(self, method):
-        """Return a list of type signatures.
+        """
+        Return a list of type signatures.
 
         Each type signature is a list of the form [rtype, type1, type2, ...]
         where rtype is the return type and typeN is the type of the Nth
@@ -195,11 +194,13 @@ class JSONRPCIntrospection(JSONRPC):
 
 
 def addIntrospection(jsonrpc):
-    """Add Introspection support to an JSONRPC server.
+    """
+    Add Introspection support to an JSONRPC server.
 
     @param jsonrpc: The jsonrpc server to add Introspection support to.
     """
     jsonrpc.putSubHandler('system', JSONRPCIntrospection, ('protocol',))
+
 
 class QueryProtocol(basic.NetstringReceiver):
 
@@ -212,6 +213,7 @@ class QueryProtocol(basic.NetstringReceiver):
     def stringReceived(self, string):
         self.factory.data = string
         self.transport.loseConnection()
+
 
 class QueryFactory(protocol.ClientFactory):
 
@@ -261,13 +263,13 @@ class QueryFactory(protocol.ClientFactory):
 
 
 class Proxy:
-    """A Proxy for making remote JSON-RPC calls.
+    """
+    A Proxy for making remote JSON-RPC calls.
 
     Pass the URL of the remote JSON-RPC server to the constructor.
 
     Use proxy.callRemote('foobar', *args) to call remote method
     'foobar' with *args.
-
     """
 
     def __init__(self, host, port):
@@ -285,6 +287,7 @@ class Proxy:
         factory = QueryFactory(method, *args)
         reactor.connectTCP(self.host, self.port, factory)
         return factory.deferred
+
 
 class RPCFactory(protocol.ServerFactory):
 
@@ -313,4 +316,3 @@ class RPCFactory(protocol.ServerFactory):
 
 
 __all__ = ["JSONRPC", "Proxy", "RPCFactory"]
-
